# Web_HW6

./: HW_6.db  README.md  main.py  pyproject.toml  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  run_script.py  script.sql
