[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Olha Lialina <145963563+olhalialina@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^23.3.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
